- Updated tests - Made calendar resource more convenient - Updated doc
