# doc/swagger.yaml
@@ -32,16 +32,16 @@ paths:
         '200':
           description: successful operation
           headers:
-            'ValidationError-{query-parameter-name}':
+            'QueryError-{query-parameter-name}':
               type: string
-              description: Validation error applied to query parameter
+              description: Validation query errors applied to specified query parameter
           schema:
             type: array
             items:
-              $ref: '#/definitions/Property'
+              $ref: '#/definitions/PropertyCalendar'
         '400':
           description: If invalid values was delivered with request parameters
-  '/propertyDays/{id}/attributes':
+  '/properties/{id}/propertyDays/attributes':
     patch:
       description: Update properties availability and price
       parameters:
@@ -76,9 +76,9 @@ paths:
               - Fri
               - Sat
               - Sun
-        - name: propertyAttributes
+        - name: propertyDayAttributes
           in: body
-          description: See <b>PropertyAttibute</b> model
+          description: <b>PropertyDayAttibutes</b> Model
           required: true
           schema:
             $ref: '#/definitions/PropertyDayAttributes'
@@ -87,7 +87,7 @@ paths:
           description: Successful update
         '404':
           description: If property with given id was not found
-  '/propertyDays/{id}':
+  '/properies/{id}/propertyDays/{id}':
     patch:
       description: Update property availability and price
       parameters:
@@ -98,7 +98,7 @@ paths:
           type: integer
         - name: propertyDay
           in: body
-          description: Data for day patch update
+          description: PropertyDay Model
           required: true
           schema:
             $ref: '#/definitions/PropertyDay'
@@ -108,6 +108,18 @@ paths:
         '404':
           description: If property with given id was not found
 definitions:
+  PropertyCalendar:
+    type: object
+    properties:
+      property:
+        type: object
+        properties:
+          title:
+            type: string
+      days:
+        type: array
+        items:
+          $ref: '#/definitions/PropertyDay'
   Property:
     type: object
     properties:
